syntax="proto3";

option go_package="./pb";
import "petition_msg.proto";
import "google/protobuf/empty.proto";

package proto;

service PetitionService {
    rpc GetPetitionById(PetitionId) returns (Petition);
    rpc CreatePetition(CreatePetitionRequest) returns (PetitionId);
    rpc GetPetitions(GetPetitionsRequest) returns (GetPetitionsResponse);
    rpc UpdatePetitionStatus(UpdatePetitionStatusRequest) returns (google.protobuf.Empty);
    rpc DeletePetition(PetitionId) returns (google.protobuf.Empty);
    // returns empty if is valid, error if not valid
    rpc ValidatePetitionId(PetitionId) returns (google.protobuf.Empty);
}
